Support multiple locales string for accept language list

This patch enables PrependToAcceptLanuagesIfNecessary to take
multi-locale string. This is a preparation for supporting
multi-locale feature from Android N. This patch does not break any
existing behaviors.

BUG=593515

Review-Url: https://codereview.chromium.org/2393673003
Cr-Commit-Position: refs/heads/master@{#424372}

Former-commit-id: 6cc907c7b494642fe93ee850439ad816998e21e3